<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/my_market"
        android:enabled="true"
        android:icon="@drawable/nav_mymarket_selector"
        android:title="@string/my_market"/>
    <item
        android:id="@+id/exhibitors"
        android:enabled="true"
        android:icon="@drawable/nav_exhibitors_selector"
        android:title="@string/exhibitors"/>
    <item
        android:id="@+id/events"
        android:enabled="true"
        android:icon="@drawable/nav_events_selector"
        android:title="@string/events"/>
    <item
        android:id="@+id/map"
        android:enabled="true"
        android:icon="@drawable/nav_map_selector"
        android:title="@string/map"/>
    <item
        android:id="@+id/about"
        android:enabled="true"
        android:icon="@drawable/nav_about_selector"
        android:title="@string/about"/>
</menu>