<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#201A1A">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toolbar_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/my_market"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:layout_margin="8dp"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Plan Your Market with My Market"
        android:textSize="22sp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/plan_my_market_text"
        android:textColor="@color/black"
        android:lineSpacingExtra="2sp"
        android:translationY="-1.11sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/sign_in_description"
        android:lineSpacingExtra="4sp"
        android:textColor="#3B3C3D"
        android:translationY="-1.8sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_address_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_text_field"
        android:gravity="start|center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="16sp"
        android:textColor="#3B3C3D" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_address_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_text_field"
            android:gravity="start|center"
            android:hint="@string/email_address"
            android:textColor="#3B3C3D"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_address_layout"
        android:background="@drawable/input_text_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        app:passwordToggleEnabled="true"
        android:gravity="start|center"
        android:textColor="#3B3C3D"
        android:paddingEnd="8dp"
        android:paddingStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:background="@drawable/input_text_field"
            android:hint="@string/password"
            android:textColor="#3B3C3D"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_in"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        android:background="@drawable/button_disabled_corners"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="36dp"
        android:enabled="false"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:gravity="center"
        android:textColor="#201A1A"
        android:textSize="14sp"
        android:lineSpacingExtra="4sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_sign_in"
        android:text="@string/forgot_your_password"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        android:layout_marginStart="62dp"
        android:lineSpacingExtra="4sp"
        android:gravity="start"
        android:textColor="#3B3C3D"
        android:translationY="-1.8sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/button_sign_in"
        app:layout_constraintStart_toEndOf="@id/forgot_password"
        android:text="@string/reset"
        android:layout_marginTop="24dp"
        android:gravity="start"
        android:textSize="14sp"
        android:layout_marginStart="16dp"
        android:textColor="#F04F52"
        android:translationY="-1.8sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/need_account"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password"
        app:layout_constraintEnd_toStartOf="@id/register_here"
        android:gravity="start"
        tools:text="Need an account?"
        android:layout_marginTop="24dp"
        android:layout_marginStart="62dp"
        android:textSize="14sp"
        android:textColor="#3B3C3D"
        android:text="@string/need_account"
        android:lineSpacingExtra="4sp"
        android:translationY="-1.8sp" />



    <androidx.appcompat.widget.AppCompatTextView
        android:visibility="visible"
        android:id="@+id/register_here"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="14dp"
        app:layout_constraintTop_toBottomOf="@id/reset"
        app:layout_constraintStart_toEndOf="@id/need_account"
        tools:text="Register Here"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        android:textColor="#F04F52"
        android:text="@string/sign_up_here"
        android:translationY="-1.8sp" />

</androidx.constraintlayout.widget.ConstraintLayout>