<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_arrow_black"
            android:layout_marginStart="16dp"
            android:layout_gravity="start|center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="22sp"
            android:lineSpacingExtra="2sp"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:text="@string/forgot_password" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_description"
        android:layout_marginStart="16dp"
        android:layout_gravity="start|center"
        android:textColor="#3B3C3D"
        android:layout_marginTop="15dp"
        android:lineSpacingExtra="4sp"
        android:translationY="-1.8sp"
        android:layout_marginEnd="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_address_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_text_field"
            android:gravity="start|center"
            android:hint="@string/email_address"
            android:textColor="#3B3C3D"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_disabled_corners"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="#201A1A"
        android:textSize="14sp"
        android:lineSpacingExtra="4sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/success"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:layout_margin="32dp"
        android:background="@drawable/success_border"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginTop="24dp"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_success"
            android:background="@drawable/circle_success"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#3B3C3D"
            android:textSize="16sp"
            android:layout_marginTop="40dp"
            android:lineSpacingExtra="5sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/forgot_password_success" />

    </LinearLayout>


</LinearLayout>